--- a/ansible_hw/ansible/ansible.cfg
+++ b/ansible_hw/ansible/ansible.cfg
@@ -1,7 +1,4 @@
-[default]
+[defaults]
 
-inventory = /vagrant/ansible/hosts
+inventory = /vagrant/ansible/inventory
 host_key_checking = false
-localhost_warning = false
-interpreter_python = /usr/bin/python3.8
-
