--- a/ansible_hw/Vagrantfile
+++ b/ansible_hw/Vagrantfile
@@ -1,17 +1,18 @@
 Vagrant.configure("2") do |config|
 
   config.vm.define "ansible-server" do |server|
-  server.vm.box = "geerlingguy/ubuntu1804"
+  server.vm.box = "geerlingguy/ubuntu2004"
   server.vm.network "private_network", ip: "192.168.56.70"
   server.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
     vb.name = "acm"
     vb.cpus = "2"
   end
+  server.vm.provision "shell", path: "data/ansible-install.sh"
   end
 
   config.vm.define "host01" do |host01|
-	host01.vm.box = "geerlingguy/ubuntu1804"
+	host01.vm.box = "geerlingguy/ubuntu2004"
 	host01.vm.network "private_network", ip: "192.168.56.71"
 	host01.vm.provider "virtualbox" do |vb|
 		vb.memory = "1024"
@@ -21,17 +22,18 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "host02" do |host02|
-  host02.vm.box = "geerlingguy/ubuntu1804"
+  host02.vm.box = "geerlingguy/ubuntu2004"
   host02.vm.network "private_network", ip: "192.168.56.72"
 	host02.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
 	  vb.cpus = "2"
     vb.name = "web01"
 	end
+  host02.vm.provision "shell", path: "data/host02.sh"
   end
 
   config.vm.define "host03" do |host03|
-  host03.vm.box = "geerlingguy/ubuntu1804"
+  host03.vm.box = "geerlingguy/ubuntu2004"
   host03.vm.network "private_network", ip: "192.168.56.73"
 	host03.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
