--- a/ansible_hw/Vagrantfile
+++ b/ansible_hw/Vagrantfile
@@ -27,7 +27,7 @@ Vagrant.configure("2") do |config|
 	host02.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
 	  vb.cpus = "2"
-    vb.name = "web01"
+    vb.name = "host02"
 	end
   host02.vm.provision "shell", path: "data/host02.sh"
   end
@@ -38,8 +38,9 @@ Vagrant.configure("2") do |config|
 	host03.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
 	  vb.cpus = "2"
-    vb.name = "web02"
+    vb.name = "host03"
 	end
+  host03.vm.provision "shell", path: "data/host03.sh"
   end
 
 end
