--- a/ansible_hw/Vagrantfile
+++ b/ansible_hw/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
   server.vm.network "private_network", ip: "192.168.56.70"
   server.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
-    vb.name = "acm"
+    vb.name = "ansible-server"
     vb.cpus = "2"
   end
   server.vm.provision "shell", path: "data/ansible-install.sh"
