--- a/ansible_hw/Vagrantfile
+++ b/ansible_hw/Vagrantfile
@@ -42,8 +42,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "host03" do |host03|
     host03.vm.box = "geerlingguy/ubuntu2004"
-    host03.vm.network "private_network", ip: "192.168.56.73"
-	  host03.vm.network "forwarded_port", guest: 80, host: 80
+    host03.vm.network "public_network",
+      use_dhcp_assigned_default_route: true
     host03.vm.hostname = "nginxtest"
     host03.vm.provider "virtualbox" do |vb|
       vb.memory = "1024"
